Updated to 1.08 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Module-Reload-1.07.tar.bz2: 0f27afe10b25d60dc588cce2e92fde60db280c24
 sources:
-  "Module-Reload-1.07.tar.bz2": 0f27afe10b25d60dc588cce2e92fde60db280c24
+  Module-Reload-1.08.tar.gz: b6f9519fac5febb93ed9eacb31c270c8ed27f786
